roles/azure_minimal_nsg/files/nsg-deployment-template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "networkSecurityGroupName": {
            "type": "string",
            "metadata": {
                "description": "Name of network security group."
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "opsSourceAddressPrefix": {
            "type": "string",
            "defaultValue": "*",
            "metadata": {
                "description": "Operations source address."
            }
        },
        "resourceTags": {
            "type": "object"
        }
    },
    "resources": [
        {
            "apiVersion": "2020-05-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroupName')]",
            "location": "[parameters('location')]",
            "tags": "[parameters('resourceTags')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "ops-allow-ssh",
                        "properties": {
                            "priority": 1100,
                            "access": "Allow",
                            "direction": "Inbound",
                            "destinationPortRange": "22",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "[parameters('opsSourceAddressPrefix')]",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "ops-allow-winrm",
                        "properties": {
                            "priority": 1200,
                            "access": "Allow",
                            "direction": "Inbound",
                            "destinationPortRange": "5986",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "[parameters('opsSourceAddressPrefix')]",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "ops-allow-rdp",
                        "properties": {
                            "priority": 1300,
                            "access": "Allow",
                            "direction": "Inbound",
                            "destinationPortRange": "3389",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "[parameters('opsSourceAddressPrefix')]",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        }
    ]
}
